--- a/Raccoons.html
+++ b/Raccoons.html
@@ -37,7 +37,7 @@
     </style>
 </head>
 <body>
-    <img src="/Users/gabriel/Raccoons/Raccoons/raccoons.jpg" alt="Your Image">
+    <img src="raccoons.jpg" alt="Your Image">
     <figcaption>Picture from NANPA © Keith Freeburn</figcaption>
     <emoji>🦝</emoji>
     <p>Hello Raccoons</p>
